--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,14 @@
 {
-    "builds": [{
-        "src": "ec/wsgi.py",
-        "use": "@ardnt/vercel-python-wsgi",
-        "config": { "maxLambdaSize": "15mb" }
-    }],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "ec/wsgi.py"
-        }
-    ]
+  "builds": [
+    {
+      "src": "ec/wsgi.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "ec/wsgi.py"
+    }
+  ]
 }
