--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-cors-headers==4.3.1
 django-filter==23.5
 django-js-asset==2.2.0
 djangorestframework==3.14.0
+gunicorn==21.2.0
 idna==3.6
 pillow==10.2.0
 pytz==2023.3.post1
